# open-bquant

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: main.py
backend/api/routers/: data.py  portfolio.py  quant.py
backend/core/: config.py  database.py
backend/data/: fetcher.py  models.py
backend/quant/: backtester.py  factors.py  models.py  optimizer.py
docker/backend/: Dockerfile
docker/db/: init.sql
docker/jupyter/: Dockerfile
docker/nginx/: nginx.conf
frontend/dashboard/: index.html  package.json  vite.config.ts
frontend/dashboard/src/: App.tsx  index.css  main.tsx
frontend/dashboard/src/api/: client.ts
frontend/dashboard/src/pages/: BacktestViewer.tsx  FactorExplorer.tsx  MarketOverview.tsx  PortfolioAnalyzer.tsx  StockChart.tsx
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py
mybquant/: __init__.py  data.py  portfolio.py  quant.py
notebooks/: 01_data_exploration.ipynb
strategies/: base.py  momentum.py
tests/: conftest.py
tests/test_quant/: test_factors.py
