[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mybquant"
version = "0.1.0"
description = "Personal Bloomberg BQUANT-inspired quantitative finance platform"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "mybquant", "strategies", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "mybquant", "strategies"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]          # allow assert in tests
"migrations/*" = ["N999"]     # allow non-standard module names in alembic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
pretty = true
ignore_missing_imports = true   # many quant libs don't ship stubs
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "vectorbt.*", "nautilus_trader.*", "pyfolio.*", "empyrical.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests that require Docker services",
    "unit: marks fast unit tests",
]

[tool.coverage.run]
source = ["backend", "mybquant", "strategies"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
